--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,13 @@
-<style>
-        .img {
+        img {
             border-style: solid;
             border-color: rgb(255, 148, 77);
-            
+            border-width: 2px;
         }
 
         h1 {
             border-style: solid;
             border-color: hsl(204, 100%, 50%);
+            border-width: 2px;
         }
 
         body {
@@ -21,5 +21,3 @@
         footer {
             background-color: rgb(255, 255, 0);
         }
-
-        <style>
