--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,7 @@
 
         h1 {
             border-style: solid;
+            background-color: hsl(0, 100%, 70%);
             border-color: hsl(204, 100%, 50%);
             border-width: 2px;
         }
