--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,13 @@
             border-width: 2px;
         }
 
+        h2 {
+            border-style: solid;
+            background-color: hsl(0, 100%, 70%);
+            border-color: hsl(204, 100%, 50%);
+            border-width: 2px;
+        }
+
         body {
             background-color: hsl(120, 60%, 55%);
         }
