--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,4 +28,6 @@
 
         footer {
             background-color: rgb(255, 255, 0);
+            border-style: dotted;
+            border-color: brown;
         }
