--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,4 +30,6 @@
             background-color: rgb(255, 255, 0);
             border-style: dotted;
             border-color: brown;
+            border-width: 3px;
+            
         }
