--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-        img {
+        img1 {
             border-style: solid;
             border-color: rgb(255, 148, 77);
             border-width: 2px;
