--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,7 @@
             background-color: hsl(0, 100%, 70%);
             border-color: hsl(204, 100%, 50%);
             border-width: 2px;
+            border-right: 2px;
         }
 
         h2 {
@@ -16,6 +17,7 @@
             background-color: hsl(0, 100%, 70%);
             border-color: hsl(204, 100%, 50%);
             border-width: 2px;
+            border-right: 2px;
         }
 
         body {
@@ -31,4 +33,5 @@
             border-style: dotted;
             border-color: brown;
             border-width: 3px;
+            border-right: 3px;
         }
