--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-        img1 {
+        img {
             border-style: solid;
             border-color: rgb(255, 148, 77);
             border-width: 2px;
@@ -13,6 +13,14 @@
         }
 
         h2 {
+            border-style: solid;
+            background-color: hsl(0, 100%, 70%);
+            border-color: hsl(204, 100%, 50%);
+            border-width: 2px;
+            border-right: 2px;
+        }
+
+        h3 {
             border-style: solid;
             background-color: hsl(0, 100%, 70%);
             border-color: hsl(204, 100%, 50%);
