--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,10 @@
+        .container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        
         img {
             border-style: solid;
             border-color: rgb(255, 148, 77);
