--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-        .container {
+        .container, div {
             display: flex;
             flex-direction: column;
             justify-content: center;
