--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,10 @@
             border-width: 4px;
         }
 
+        img:nth-child(odd) {
+            
+        }
+
         h1 {
             border-style: solid;
             background-color: hsl(0, 100%, 70%);
