--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,6 +50,7 @@
             transition-property: font-size;
             transition-duration: 2s;
             transition-timing-function: linear;
+            align-items: center;
         }
 
         a:hover {
@@ -71,6 +72,8 @@
 
         label {
             font-size: 3rem;
+            display: flex;
+            flex-direction: column;
             align-items: center;
         }
 
