--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,6 +62,12 @@
             color: black;
         }
 
+        button {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
         body {
             background-color: hsl(120, 60%, 55%);
         }
