--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,10 +62,14 @@
             color: black;
         }
 
-        button {
+        .button {
             display: flex;
             flex-direction: column;
             align-items: center;
+            border-color: red;
+            border-style: solid;
+            border-left: 5px;
+            border-right: 5px;
         }
 
         body {
