--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,6 +45,10 @@
             border-right: 2px;
         }
 
+        button, input, textarea {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
         a {
             font-size: 2rem;
             transition-property: font-size;
