--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,6 +47,7 @@
 
         button, input, textarea {
             font-family: Arial, Helvetica, sans-serif;
+            align-items: center;
         }
 
         a {
