--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,7 +45,7 @@
             border-right: 2px;
         }
 
-        input, textarea {
+        input, button {
             font-family: Arial, Helvetica, sans-serif;
             align-items: center;
             font-size: 2rem;
