--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,8 +47,9 @@
 
         input, button {
             font-family: Arial, Helvetica, sans-serif;
+            font-size: 1.5rem;
+            justify-content: center;
             align-items: center;
-            font-size: 2rem;
         }
 
         a {
