--- a/styles/styles.css
+++ b/styles/styles.css
@@ -82,7 +82,13 @@
 
         p {
             color: rgb(153, 0, 153);
-        }    
+        }
+
+        label {
+            font-size: 1.4rem;
+            justify-content: center;
+            align-items: center;
+        }
 
         .formlabel {
             font-size: 2rem;
@@ -94,9 +100,9 @@
 
         .radiolabel {
             font-size: 1rem;
-            display: inline-block;
+            display: flex;
             vertical-align: top;
-            margin: auto;
+            margin: 0 auto;
         }
 
         footer {
